# NovelRT

./: CMakeLists.txt
samples/: CMakeLists.txt
samples/src/: main.cpp
src/: CMakeLists.txt
src/NovelRT/Graphics/: TextRect.cpp
